@@ -1,6 +1,8 @@
 // License: GPL. Copyright 2007-2008 by Brett Henderson and other contributors.
 package com.bretth.osmosis.core.pgsql.v0_6;
 
+import java.util.logging.Logger;
+
 import com.bretth.osmosis.core.database.DatabaseLoginCredentials;
 import com.bretth.osmosis.core.database.DatabasePreferences;
 import com.bretth.osmosis.core.pgsql.common.DatabaseContext;
@@ -15,6 +17,9 @@ import com.bretth.osmosis.core.task.common.RunnableTask;
  * @author Brett Henderson
  */
 public class PostgreSqlDatasetTruncator implements RunnableTask {
+	
+	private static final Logger log = Logger.getLogger(PostgreSqlDatasetTruncator.class.getName());
+	
 	
 	// These SQL statements will be invoked to truncate each table.
 	private static final String[] SQL_STATEMENTS = {
@@ -53,11 +58,18 @@ public class PostgreSqlDatasetTruncator implements RunnableTask {
 				schemaVersionValidator.validateVersion(PostgreSqlVersionConstants.SCHEMA_VERSION);
 			}
 			
+			log.fine("Truncating tables.");
 			for (int i = 0; i < SQL_STATEMENTS.length; i++) {
 				dbCtx.executeStatement(SQL_STATEMENTS[i]);
 			}
 			
+			log.fine("Committing changes.");
 			dbCtx.commit();
+			
+			log.fine("Vacuuming database.");
+			dbCtx.setAutoCommit(true);
+			dbCtx.executeStatement("VACUUM ANALYZE");
+			log.fine("Complete.");
 			
 		} finally {
 			dbCtx.release();
